updated class checker references